<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransferBetweenAccountsActivity">

    <LinearLayout
        android:id="@+id/originTransferGroup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/acountOriginTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/origin_account" />

        <Button
            android:id="@+id/selectOriginAccountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select" />

    </LinearLayout>

    <TableRow
        android:id="@+id/originGroup"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/originTransferGroup">

        <LinearLayout
            android:layout_width="218dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/typeAccountOriginText"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="bottom"
                android:text="TextView" />

            <TextView
                android:id="@+id/numberAccountOriginText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="TextView" />
        </LinearLayout>

        <TextView
            android:id="@+id/amountAccountOriginText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="TextView"
            android:textSize="24sp" />

    </TableRow>

    <LinearLayout
        android:id="@+id/amountGroup"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/originGroup">

        <TextView
            android:id="@+id/amountTransferTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ammount" />

        <EditText
            android:id="@+id/transferAmountText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="0.00"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/destinityTransferGroup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountGroup">

        <TextView
            android:id="@+id/accountDestinityTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/destinity_account" />

        <Button
            android:id="@+id/selectDestinityAccountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select" />

    </LinearLayout>

    <TableRow
        android:id="@+id/destinityGroup"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destinityTransferGroup">

        <LinearLayout
            android:layout_width="218dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/typeAccountDestinityText"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="bottom"
                android:text="TextView" />

            <TextView
                android:id="@+id/numberAccountDestinityText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="TextView" />
        </LinearLayout>

        <TextView
            android:id="@+id/amountAccountDestinityText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="TextView"
            android:textSize="24sp" />

    </TableRow>

    <LinearLayout
        android:id="@+id/buttonsGroup"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destinityGroup">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/accept" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>